point FILESySTEM_PREFIX at fcrepo

--- a/docker-files/lighttpd/lighttpd.conf
+++ b/docker-files/lighttpd/lighttpd.conf
@@ -33,8 +33,9 @@ fastcgi.server = ( "/" =>
         "bin-environment" => (
             "LOGFILE" => "/var/log/iipsrv.log",
             #"VERBOSITY" => "5",
+            #"WATERMARK" => "/tmp/watermark.tif",
             "MAX_IMAGE_CACHE_SIZE" => "10",
-            "FILESYSTEM_PREFIX" => "/data/images/",
+            "FILESYSTEM_PREFIX" => "/data/fcrepo.binary.directory/",
             "JPEG_QUALITY" => "75",
             "MAX_CVT" => "3000"
         ),
