latest changes to iip

--- a/docker-files/lighttpd/lighttpd.conf
+++ b/docker-files/lighttpd/lighttpd.conf
@@ -4,8 +4,8 @@ var.statedir = "/var/lib/lighttpd"
 server.modules = (
     "mod_access",
     "mod_accesslog",
-    "mod_fastcgi",
-    "mod_rewrite"
+    "mod_rewrite",
+    "mod_alias"
 )
 
 server.document-root = "/var/www/html"
@@ -17,31 +17,17 @@ accesslog.filename = "/var/log/lighttpd/access.log"
 
 index-file.names = ( "index.html" )
 url.access-deny = ("~", ".inc")
-static-file.exclude-extensions = ( ".fcgi" )
 
 # default listening port for IPv6 falls back to the IPv4 port
 include_shell "/usr/share/lighttpd/use-ipv6.pl " + server.port
 include_shell "/usr/share/lighttpd/create-mime.conf.pl"
 include_shell "/usr/share/lighttpd/include-conf-enabled.pl"
 
-fastcgi.server = ( "/" =>
-    ((
-        "bin-path" => "/usr/local/bin/iipsrv.fcgi",
-        "socket" => "/var/run/lighttpd/iipsrv.socket",
-        "check-local" => "disable",
-        "max-procs" => 1,
-        "bin-environment" => (
-            "LOGFILE" => "/var/log/iipsrv.log",
-            #"VERBOSITY" => "5",
-            #"WATERMARK" => "/tmp/watermark.tif",
-            "MAX_IMAGE_CACHE_SIZE" => "10",
-            "FILESYSTEM_PREFIX" => "/data/fcrepo.binary.directory/",
-            "JPEG_QUALITY" => "75",
-            "MAX_CVT" => "3000"
-        ),
-        "bin-copy-environment" => (
-            "PATH", "SHELL", "USER"
-        ),
-        "broken-scriptfilename" => "enable",
-    ))
-)
+$HTTP["scheme"] == "http" {
+  # capture vhost name with regex conditiona -> %0 in redirect pattern
+  # must be the most inner block to the redirect rule
+  $HTTP["host"] =~ "(.*)" {
+     alias.url += ("/.well-known/" => "/var/www/acme-docroot/.well-known/")
+  }
+}
+
